# glueather

./: README.md  __main__.py  conf.json  glueather.py  requirements.txt  setup.cfg  ui_mainwindow.py  weathermanager.py
src/: README.md  glueather.py
src/glueather/: __main__.py  ui_mainwindow.py  weathermanager.py
