[metadata]
name = glueather
version = 1.1.0
author = Vasco Costa
author_email = vascomacosta@gmail.com
description = A simple Python/Qt weather application using the OpenWeather API
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vascocosta/glueather
project_urls =
    Bug Tracker = https://github.com/vascocosta/glueather/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyowm
    pyqt5

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    glueather = glueather.__main__:main
